--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/jstree/jstree-actions.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/jstree/jstree-actions.scss
@@ -4,14 +4,10 @@
     display: $jstree-actions-display;
 
     &__handle {
-        padding: $jstree-actions-handle-offset;
         color: $jstree-actions-handle-color;
-
-        width: 16px;
 
         &.btn {
             padding: $jstree-actions-handle-offset;
-
             width: 16px;
         }
 
